Sun Sep  7 00:58:49 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: implement cast.

	* net/loveruby/cflat/asm/Assembler.java: new method #movsx,
	  #movzx.

	* net/loveruby/cflat/type/PointerType.java: provide #isSigned for
	  cast.

	* net/loveruby/cflat/type/ArrayType.java: ditto.

	* net/loveruby/cflat/type/UserType.java: ditto.

	* test: test cast operation.

Sat Sep  6 23:19:48 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Entity.java (alignment): fetch value from
	  its type.

	* net/loveruby/cflat/type/ArrayType.java: should compute allocated
	  size from member's #allocSize, not #size.

	* net/loveruby/cflat/type/StructType.java (alignment): do not
	  depend on Entity#size.

Mon Sep  1 01:53:52 2008  Minero Aoki  <aamine@loveruby.net>

	* test/test_cbc.sh: run tests for switch stmt.

Mon Sep  1 01:49:23 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: pass location node to the
	  CaseNode explicitly.

	* net/loveruby/cflat/ast/CaseNode.java: default clause does not
	  have value, we cannot extract location node from values.  Receive
	  a location node as a first argument explicitly.

	* net/loveruby/cflat/compiler/CodeGenerator.java: must define end
	  label.

	* net/loveruby/cflat/compiler/CodeGenerator.java: implement
	  default clause.

	* test: test switch stmt.

Mon Sep  1 01:26:20 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: static function
	  should be local in the file.

	* test: test it.

Sun Aug 31 20:09:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/CastNode.java: remove unused method
	  #resolve.

Sun Aug 31 20:02:56 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: better help message.

Sun Aug 31 19:59:35 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/MemberNode.java: has always non-constant
	  address.
