@@ -1,3 +1,8 @@
+Sun Sep  7 01:21:38 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/asm/Register.java (lowerByteRegister): check
+	  wheather the register has lower-byte register or not.
+
 Sun Sep  7 00:58:49 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/CodeGenerator.java: implement cast.
